written two api's and some fixes of routes permission

--- a/angular/src/app/main/reconcilliation/itemized/itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized.component.html
@@ -35,7 +35,7 @@
                                             <i class="la la-arrow-left"></i>
                                             Back
                                         </a>
-                                        <button class="btn btn-brand"><i class="fa fa-plus"></i>
+                                        <button class="btn btn-brand" (click)="RedirectToAddNew()"><i class="fa fa-plus"></i>
                                             {{"AddNew" | localize}}</button>
                                     </div>
                                 </div>
