update account component

--- a/angular/src/account/account.component.html
+++ b/angular/src/account/account.component.html
@@ -1,9 +1,9 @@
 
 
                 <div>
-                    <!-- <div *ngIf="showTenantChange()" class="kt-login__signup-label tenant-change-box text-center">
+                    <div *ngIf="showTenantChange()" class="kt-login__signup-label tenant-change-box text-center">
                         <tenant-change></tenant-change>
-                    </div> -->
+                    </div>
                     <router-outlet></router-outlet>
                 </div>
       
