--- a/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
@@ -1,3 +1,4 @@
+
 <div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
     <div class="row">
         <div class="col-lg-12">
@@ -24,15 +25,15 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="InvoiceNo">Invoice No.</label>
-                                            <input type="text" name="accountName" class="form-control"
-                                                [(ngModel)]="accountDto.accountName">
+                                            <input type="text" name="inoviceNo" class="form-control"
+                                                [(ngModel)]="itemizedDto.inoviceNo">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="TaskName">Journal Entry No.</label>
-                                            <input type="text" name="accountNumber" class="form-control"
-                                                [(ngModel)]="accountDto.accountNumber">
+                                            <input type="text" name="journalEntryNo" class="form-control"
+                                                [(ngModel)]="itemizedDto.journalEntryNo">
                                         </div>
                                     </div>
                                 </div>
@@ -40,52 +41,29 @@
                                     <div class="col-md-6">
 
                                         <div class="form-group category-selector">
-                                            <label for="TaskName">Start Date</label>
-                                            <input [(ngModel)]="startDate" (ngModelChange)="loadDaysByMonth($event)" required="required"
+                                            <label for="Date">Date</label>
+                                            <input [(ngModel)]="itemizedDto.date" (ngModelChange)="loadDaysByMonth($event)" required="required"
                                             class="form-control" name="date" bsDatepicker
                                             placeholder="Select Date" class="form-control" name="date"
                                             bsDatepicker [minDate]="minDate"
-                                            [bsConfig]="{dateInputFormat: 'MMMM YYYY'}"
-                                            (onShown)="onOpenCalendar($event)">
+                                           
+                                           >
                                         </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <div class="form-group category-selector">
-                                            <label for="TaskName">End Date</label>
-                                            <input [(ngModel)]="endDate" (ngModelChange)="loadDaysByMonth($event)" required="required"
-                                            class="form-control" name="date" bsDatepicker
-                                            placeholder="Select Date" class="form-control" name="date"
-                                            bsDatepicker [minDate]="minDate"
-                                            [bsConfig]="{dateInputFormat: 'MMMM YYYY'}"
-                                            (onShown)="onOpenCalendar($event)">
+                                        <div class="form-group">
+                                            <label for="Amount">Amount</label>
+                                            <input type="text" name="amount" class="form-control"
+                                                [(ngModel)]="itemizedDto.amount">
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <label>Amount</label>
-                                        <app-user-list-component comingChangeReguest = "" userId = {{selectedUserID}} ></app-user-list-component>
-                                    </div>
-                                    <div class="col-md-6">
-
-                                        <div class="form-group category-selector">
-                                            <label for="TaskName">Accomulate Amount</label>
-                                            <button type="button" class="btn btn-secondary dropdown-toggle"
-                                                data-toggle="dropdown" aria-haspopup="true"
-                                                aria-expanded="false">{{reconcillationType}}</button>
-                                            <div class="dropdown-menu">
-                                                <a class="dropdown-item" *ngFor="let item of reconcillationTypeList"
-                                                    (click)="reconcillationClick(item.id,item.name)">
-                                                    {{item.name}}</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                               
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label for="description">Description</label>
-                                            <textarea class="form-control" required [(ngModel)]="description"
+                                            <textarea class="form-control" required [(ngModel)]="itemizedDto.description"
                                                 id="description" name="description" (keydown.enter)="save($event)"
                                                  ></textarea>
                                         </div>   
@@ -102,12 +80,9 @@
                         <div class="kt-portlet__head">
                         </div>
                         <div class="form-group margin-top-5">
-                            <button *ngIf="editAccountCheck == false" class="btn btn-brand" type="submit">
+                            <button (click)="SaveChanges()" class="btn btn-brand" type="submit">
                                 Save
-                            </button>
-                            <button *ngIf="editAccountCheck == true" class="btn btn-brand" type="submit">
-                                Update
-                            </button>
+                            </button>                     
                         </div>
                     </form>
                 </div>
