--- a/angular/src/app/main/reconcilliation/reconcilliation.component.html
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.html
@@ -171,7 +171,7 @@
                                             <span class="">{{item.accountNumber}}</span>
                                             
                                         </td>
-                                        <td class="accountName-cell" (click)="reDirectToItemizedAmotized(item.reconciliationTypeId)">
+                                        <td class="accountName-cell" (click)="reDirectToItemizedAmotized(item.reconciliationTypeId,item.id,item.accountNumber,item.accountName)">
                                             <span class="task-box">{{item.accountName}}</span>
                                         </td>
                                         <td class="accountType-cell">
